--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,19 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1CYEEM5059"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-1CYEEM5059');
+  </script>
+
   <div id="root"></div>
+
 
 
   <!--
